Some code moved to new Json project